11/12/2023 v.0004
- Tweaked variables for hull traverse and turret traverse, still need adjustment but the idea is that your turret turns faster than the 
hull. Still need to break down each tank to have different attributes.
- Enemies will now fire at the player. They mainly just fire in general but they are always targeting the player. Attempted to get the 
enemy to only fire when the turret is lined up with the player but haven't figured out the logic yet.
- Enemy 'bullets' behave like the players when interacting with the environment, but don't interact with the player.

6/11/2023 v.0003
- Broke the code into multiple files, partially as a test to see how it would work but also to help find specific parts of the game as things
keep getting added. I'm also thinking about switching the engine to pygame as Kivy uses that and I think that would make it simpler to add
GUI elements, a main menu, and other things like tank selection.
- Enemies now will start off the screen and come in from the top of the screen. Will now need to implement a timer to spawn in additional
enemies as the game goes on.

6/10/2023 v.0002
- Logic for tank round hitting an enemy is in place, including basic hit points and damage.
    -- Enemies are removed when their health gets to zero or below.
- Enemies don't start aiming at player until they are spawned in, currently set to spawn in based on the y axis position of the player.
- Enemies will now also start moving at the player!

6/4/2023 v.0001
- Improved the game window by maximizing the screen.
- First iteration of enemies.
    -- Random number of enemies at the start of the game, they currently don't move but they do track the player
    with their turret.